fix(oblique/styles): truncates form values
OUI-4326

--- a/projects/oblique/src/styles/scss/core/components/_form.scss
+++ b/projects/oblique/src/styles/scss/core/components/_form.scss
@@ -55,6 +55,10 @@ input {
 	overflow: visible; // Edge
 }
 
+input {
+	text-overflow: ellipsis;
+}
+
 button,
 select {
 	text-transform: none; // RFirefox
